# disc-solve

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
mockups/: list-view.html  primary-interface.html
scripts/: capture.mjs  screenshot.sh
src/: App.tsx  SortFlow.tsx  ViewSeg.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  backup.rs  category.rs  dups.rs  lib.rs  main.rs  power.rs  safety.rs  scan.rs  sort.rs
src/lib/: api.ts  demo.ts  dups.test.ts  dups.ts  filetypes.test.ts  filetypes.ts  format.test.ts  format.ts  listview.test.ts  listview.ts  notify.ts  sort.test.ts  sort.ts  suggestions.test.ts  suggestions.ts  tree.test.ts  tree.ts  treemap.test.ts  treemap.ts  types.ts
