[package]
name = "disc-solve"
version = "0.1.0"
description = "A modern, OSS disk-usage steward for macOS"
authors = ["Joe Woods <code@joewoods.dev>"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (see tauri docs).
name = "disc_solve_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Moves files to the macOS Trash (recoverable). This is the ONLY deletion path in
# the app — we never call std::fs::remove_*; see src/actions.rs.
trash = "5"
# Parallel directory walk.
rayon = "1"
# statvfs for volume used/total (progress denominator + disk gauge).
libc = "0.2"
# Content hashing for duplicate detection. Cryptographic + fast, so identical
# hashes mean identical files (no false-positive "duplicates" driving a delete).
blake3 = "1"
# MPMC channels: stream files from the scan walk into the duplicate-hashing
# workers so hashing overlaps the walk instead of waiting for it to finish.
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3"
